--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,10 +2,129 @@
 @import typography
 @import icons
 @import iframes
+@import animate
+
+body
+  margin: 0
+  padding: 0
+
+html
+  box-sizing: border-box
+
+*, *:before, *:after
+  box-sizing: inherit
+  margin: 0
+  padding: 0
 
 .deets
   display: none
   font-size: 12px
+
+#content
+  // background: url('./images/Pizza_Eaters.png')
+  background: #231f20
+  width: 636px
+  height: 355px
+  padding: 25px 40px
+  font-family: ProximaNovaCond-Semibold
+  font-weight: normal
+  position: relative
+
+  .form_container
+    position: absolute
+    left: 0
+    width: 100%
+  .result_container
+    width: 100%
+    position: absolute
+    left: 0
+    h2, .num
+      opacity: 0
+      -webkit-transform: scale(0.2)
+      -ms-transform: scale(0.2)
+      transform: scale(0.2)
+
+  h3
+    color: white
+    text-transform: uppercase
+    text-align: center
+    font-size: 15px
+    letter-spacing: 1.25px
+    border-bottom: 1px solid white
+    padding-bottom: 7px
+  h2
+    color: #FFFF00
+    text-align: center
+    font-size: 34px
+    letter-spacing: 0.85px
+    margin-top: 20px
+  input[type=text], .num
+    background: transparent
+    outline: none
+    text-align: center
+    width: 100%
+    height: 165px
+    color: #0071bc
+    // color: #cb262a
+    font-size: 140px
+    font-family: ProximaNovaCond-Semibold
+    border: none
+  button
+    cursor: pointer
+    font-family: ProximaNovaCond-Semibold
+    font-size: 20px
+    text-align: center
+    margin: 0 auto
+    display: block
+    box-shadow: 10px 10px 0px #e46425
+    background: white
+    outline: none
+    border: none
+    width: 148px
+    padding: 9px
+    &:hover
+      box-shadow: 10px 10px 0px white
+      background: #e46425
+
+
+#content.done
+  .result_container
+    display: block
+  h2, .num
+    transition:all 0.8s ease
+    @include animation('fade-in 1s forwards')
+    -webkit-transform: scale(1)
+    -ms-transform: scale(1)
+    transform: scale(1)
+  label h2
+    @include animation('slide-left 1s forwards')
+
+  input[type=text]
+    transition:all 1s ease
+    @include animation('fade-out 1s forwards')
+    -webkit-transform: scale(0.3)
+    -ms-transform: scale(0.3)
+    transform: scale(0.3)
+
+
+@include keyframes(slide-left)
+  0% { margin-left: 0 }
+  100% { margin-left: -1500px; display: none }
+
+@include keyframes(fade-out)
+  0%
+    opacity: 1
+  100%
+    opacity: 0
+    display: none
+
+@include keyframes(fade-in)
+  0%
+    opacity: 0
+    display: block
+  100%
+    opacity: 1
+    display: block
 
 @media screen and (max-width : 480px)
   .foo
@@ -17,3 +136,7 @@
   .icon
     display: inline-block
     margin: 0 5px
+
+
+@font-face
+  font-family: 'ProximaNovaCond-Semibold';src: url('http://x.kinja-static.com/assets/fonts/proxima/ProximaNovaCondBold-6e302c8978b1bd9d453fba318a1fa572.woff')
