--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -16,12 +16,7 @@ html
   margin: 0
   padding: 0
 
-.deets
-  display: none
-  font-size: 12px
-
 #content
-  // background: url('./images/Pizza_Eaters.png')
   background: #231f20
   width: 636px
   height: 355px
@@ -53,7 +48,7 @@ html
     border-bottom: 1px solid white
     padding-bottom: 7px
   h2
-    color: #FFFF00
+    color: white
     text-align: center
     font-size: 34px
     letter-spacing: 0.85px
@@ -64,7 +59,7 @@ html
     text-align: center
     width: 100%
     height: 165px
-    color: #0071bc
+    color: white
     // color: #cb262a
     font-size: 140px
     font-family: ProximaNovaCond-Semibold
@@ -80,7 +75,7 @@ html
     box-shadow: 10px 10px 0px #e46425
     background: white
     outline: none
-    border: none
+    border: 1px solid #231f20
     width: 148px
     padding: 9px
     &:hover
