--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -18,7 +18,7 @@ html
 
 #content
   background: #231f20
-  width: 636px
+  width: 100%
   height: 355px
   padding: 25px 40px
   font-family: ProximaNovaCond-Semibold
@@ -124,8 +124,12 @@ html
     display: block
 
 @media screen and (max-width : 480px)
-  .foo
-    width: 0
+  #content
+    padding: 25px 10px
+    h3
+      font-size: 12px
+    h2
+      font-size: 18px
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
   .foo
