Max width on content

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -19,6 +19,7 @@ html
 #content
   background: #231f20
   width: 100%
+  max-width: 800px
   height: 355px
   padding: 25px 40px
   font-family: ProximaNovaCond-Semibold
