--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -73,7 +73,7 @@ html
     text-align: center
     margin: 0 auto
     display: block
-    box-shadow: 10px 10px 0px #e46425
+    box-shadow: 10px 10px 0px #cb262a
     background: white
     outline: none
     border: 1px solid #231f20
@@ -81,7 +81,8 @@ html
     padding: 9px
     &:hover
       box-shadow: 10px 10px 0px white
-      background: #e46425
+      background: #cb262a
+      color: white
 
 
 #content.done
