--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -54,6 +54,8 @@ html
     font-size: 34px
     letter-spacing: 0.85px
     margin-top: 20px
+  div.num
+    color: #cb262a
   input[type=number], .num
     background: transparent
     outline: none
@@ -65,6 +67,8 @@ html
     font-size: 140px
     font-family: ProximaNovaCond-Semibold
     border: none
+    &::placeholder
+      color: white
   button
     transition:all 0.8s ease
     cursor: pointer
