--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -42,6 +42,7 @@ html
 
   h3
     color: white
+    font-family: ProximaNovaCond-Normal
     text-transform: uppercase
     text-align: center
     font-size: 15px
@@ -61,10 +62,11 @@ html
     outline: none
     text-align: center
     width: 100%
-    height: 165px
+    height: 180px
+    padding-top: 5px
     color: white
     // color: #cb262a
-    font-size: 140px
+    font-size: 150px
     font-family: ProximaNovaCond-Semibold
     border: none
     &::placeholder
@@ -79,7 +81,7 @@ html
     font-family: ProximaNovaCond-Semibold
     font-size: 20px
     text-align: center
-    margin: 0 auto
+    margin: -5px auto
     display: block
     box-shadow: 8px 8px 0px #cb262a
     background: white
@@ -152,6 +154,9 @@ html
 
 @font-face
   font-family: 'ProximaNovaCond-Semibold';src: url('http://x.kinja-static.com/assets/fonts/proxima/ProximaNovaCondBold-6e302c8978b1bd9d453fba318a1fa572.woff')
+
+@font-face
+  font-family: 'ProximaNovaCond-Normal';src: url('http://x.kinja-static.com/assets/fonts/proxima/ProximaNovaCondNormal-30ea31cbd1e9632c6002a58b4eeb233f.woff')
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button
