--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -37,7 +37,7 @@ h3, h2
     width: 100%
     position: absolute
     left: 0
-    h2, .num
+    h2, .num, .start_over
       opacity: 0
       -webkit-transform: scale(0.2)
       -ms-transform: scale(0.2)
@@ -145,7 +145,7 @@ h3, h2
       font-size: 12px
       padding-bottom: 20px
     h2
-      font-size: 23px
+      font-size: 20px
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
   .foo
